# react-native-webm-player

./: .gitignore  .npmignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TECHNICAL.md  WebmPlayer.podspec  package.json  react-native.config.js  tsconfig.build.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
android/: build.gradle  consumer-proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/com/heartit/webmplayer/: WebmPlayerModule.kt  WebmPlayerPackage.kt
android/src/main/java/com/heartit/webmplayer/audio/: AudioDeviceQuery.kt  AudioFocusManager.kt  AudioRoutePriority.kt  AudioRouteReceivers.kt  AudioRouteSetter.kt  AudioSessionBridge.kt
android/src/main/java/com/heartit/webmplayer/transcript/: TranscriptViewManager.kt
android/src/main/java/com/heartit/webmplayer/v2/: StreamPlayerModule.kt  StreamPlayerView.kt
android/src/main/java/com/heartit/webmplayer/video/: VideoViewManager.kt
android/src/main/jni/: CMakeLists.txt  JSIInstaller.cpp  JSIInstaller.h  JniGlobals.h  OnLoad.cpp  audiosession_jni.cpp  jsi_installer_jni.cpp  mediapipeline_install.h  mediapipeline_jni.cpp  videopipeline_install.h
android/src/main/jni/playback/: AAudioOutputBridge.h  AudioSessionManager.h  MediaPipelineModule.cpp  MediaPipelineModule.h  MediaSession.h
android/src/main/jni/transcript/: transcript_jni.cpp
android/src/main/jni/v2/: webmstream_jni.cpp
android/src/main/jni/video/: MediaCodecDecoder.cpp  MediaCodecDecoder.h  VideoPipelineModule.cpp  VideoPipelineModule.h  videopipeline_jni.cpp  videoview_jni.cpp
cpp/common/: AVSyncCoordinator.h  ArrivalConfidence.h  AudioOutputBridgeBase.h  AudioOutputBridgeRender.inl  AudioOutputBridgeRestart.inl  AudioResampler.h  AudioRouteTypes.h  ClipIndex.cpp  ClipIndex.h  CompilerHints.h  HealthWatchdog.h  IngestRingBuffer.h  IngestThread.h  JitterEstimatorBase.h  JsiDispatchTable.h  JsiUtils.h  MediaConfig.h  MediaLog.h  MediaSessionBase.h  MediaSessionLifecycle.inl  MediaSessionMetricsImpl.inl  MediaTime.h  ModuleRegistry.h  OrchestratorLifecycle.inl  PipelineOrchestrator.h  Platform.h  RouteHandler.h  SessionMetrics.h  StallRecoveryController.h  ThreadAffinity.h  TimedJoin.h  WebMStreamBuffer.cpp  WebMStreamBuffer.h  WorkerThread.h
cpp/common/bindings/: AudioControlBindings.inl  AudioRoutingBindings.inl  CallbackBindings.inl  ClipBindings.inl  LifecycleBindings.inl  QueryBindings.inl  TranscriptBindings.inl
cpp/demux/: DemuxLimits.h  WebmBlockParser.cpp  WebmDemuxer.cpp  WebmDemuxer.h  WebmReaders.h  WebmTrackParser.cpp
cpp/pipeline/: BroadcastPipeline.h  CallbackManager.h  MetricsCollector.h
cpp/playback/: AudioDecodeChannel.h  AudioDecodeChannelLifecycle.inl  AudioMixer.h  AudioSampleReader.inl  DecodeThread.h  DrainCrossfade.h  DriftCompensator.h  EncodedFrameQueue.h  FastDrainPolicy.h  FramePool.h  JitterEstimator.h  MediaTypes.h  OpusDecodePump.inl  OpusDecoderAdapter.h  PLCConcealer.h
cpp/transcript/: TranscriptEngine.cpp  TranscriptEngine.h  TranscriptRegistry.h  TranscriptRingBuffer.h  TranscriptThread.h
cpp/video/: FpsCounter.h  VP9HeaderParser.h  VideoConfig.h  VideoDecodeThread.h  VideoDecoder.h  VideoFrameQueue.h  VideoSurfaceRegistry.h  VideoSyncController.h  VideoTypes.h
docs/: ARCHITECTURE.md  GETTING_STARTED.md  INTEGRATION_GUIDE.md  TROUBLESHOOTING.md  V2_MIGRATION.md
example/: README.md  app.json  babel.config.js  metro.config.js  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/heartit/webmplayer/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/WebmPlayerExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/WebmPlayerExample.xcodeproj/: project.pbxproj
example/ios/WebmPlayerExample.xcodeproj/xcshareddata/xcschemes/: WebmPlayerExample.xcscheme
example/ios/WebmPlayerExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: JSIInstaller.h  JSIInstaller.mm  OpusAudio.mm  WebmPlayer.h  WebmPlayer.mm
ios/opus/: build-opus.sh
ios/playback/: AVAudioOutputBridge.h  AVAudioOutputBridge.mm  AudioDeviceEnumerator.mm  AudioDevicePoller.mm  AudioRouteDetector.mm  AudioRouteSetter.mm  AudioSessionManager.h  AudioSessionManager.mm  AudioSessionNotifications.mm  MediaPipelineModule.h  MediaPipelineModule.mm  MediaSession.h
ios/playback_v2/: MediaPipelineModuleV2.h  MediaPipelineModuleV2.mm  PlaybackEngineV2.h  PlaybackEngineV2.mm  PlaybackEngineV2VideoDecoder.h  PlaybackEngineV2VideoDecoder.mm  VideoViewV2.h  VideoViewV2.mm
ios/spike/: V2Spike.h  V2SpikeBridge.mm  V2SpikeEngine.h  V2SpikeEngine.mm  V2SpikeViewController.mm  spike_fixture_data.inc
ios/transcript/: TranscriptView.h  TranscriptView.mm  TranscriptViewManager.h  TranscriptViewManager.mm
ios/video/: VP9Decoder.h  VP9Decoder.mm  VideoPipelineModule.h  VideoPipelineModule.mm  VideoView.h  VideoView.mm  VideoViewManager.h  VideoViewManager.mm
ios/whisper/: build-whisper.sh
scripts/: download-whisper-model.sh  lint-size.js
src/: MediaPipeline.ts  index.tsx  installer.ts  v2.ts
src/components/: TranscriptView.tsx  VideoView.tsx
src/specs/: NativeWebmPlayer.ts
src/types/: audio.ts  health.ts  index.ts  metrics.ts  playback.ts  transcript.ts  video.ts
tests/sanitizer/: .gitignore  CMakeLists.txt  README.md  fuzz_demuxer.cpp  run_mutations.sh  test_audit_proof.cpp  test_common.h  test_demux_wedge.cpp  test_e2e_demux.cpp  test_health_watchdog.cpp  test_ingest_thread.cpp  test_lsan.cpp  test_route_handler.cpp  test_rt_safety.cpp  test_temporal_stress.cpp  test_transcript.cpp  test_tsan.cpp  test_ubsan.cpp  test_v1_fixes.cpp  tsan_suppressions.txt  webm_fixture.h
